--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="expires" content="0">
   
   <title>Hexo</title>
-  <meta name="author" content="John Doe">
+  <meta name="author" content="Ribin Cao">
   
   
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -116,7 +116,7 @@
 
 		<i class="fa fa-heart blink-slow"></i>
 
-		wubba lubba dub dub.
+		年轻人不讲码德(Young man dont say FUCK.)
 
 </div>    
 
@@ -245,7 +245,7 @@
   <div class="container-narrow">
   <footer> <p>
   
-  &copy; 2023 John Doe's Blog
+  &copy; 2023 Ribin Cao's Blog
   
       powered by <a href="http://hexo.io/" target="_blank">Hexo</a>.Theme <a href="https://github.com/Ares-X/hexo-theme-freemind.bithack" target="_blank">freemind.bithack</a>  
 </p>
