--- a/index.html
+++ b/index.html
@@ -172,13 +172,12 @@
 
                 <div class="home-article-content keep-markdown-body">
                     
-                        在远程ubuntu上开发想修改默认终端可以使用一下命令查看现有的shell
+                        查看和修改默认终端在远程ubuntu上开发想修改默认终端可以使用一下命令查看现有的shell
 1cat /etc/shells
 然后用如下命令指定默认终端,比如zsh
 1chsh -s /bin/zsh
 然后退出终端重新登录,可以使用如下命令退出
-1logout
-
+1...
                     
                 </div>
 
@@ -186,7 +185,7 @@
     <div class="home-article-meta-info">
         <span>
             <i class="fas fa-history"></i>&nbsp;
-            <span class="home-article-date" data-updated="Mon Mar 13 2023 07:49:40 GMT+0000">
+            <span class="home-article-date" data-updated="Mon Mar 13 2023 07:53:54 GMT+0000">
                 2023-03-13
             </span>
         </span>
